--- a/all.css
+++ b/all.css
@@ -1,4 +1,66 @@
+*{
+    font-family: Arial;
+    box-sizing: border-box; /* 確保 padding 不影響元素寬度 */
+
+}
+
 p {
     max-width: 600px;
     color: blue;
+    margin: 0;
+}
+
+.menu {
+    max-width: 600px;/* 不想出現X軸，就要用max-width讓寬度可以自適應*/
+    margin: 0 auto;
+}
+
+.menu ul {
+    display: flex; /* display: flex; 使列表水平排列 */
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+
+}
+
+.menu li {
+    list-style: none;
+    width: 100px;
+    background-color: cornsilk;
+    text-align: center;
+}
+
+.menu li a {
+    font-family: Impact,;
+    display: block;
+    text-decoration: none;
+    font-size: 16px;
+    color: black;
+    padding: 20px;
+}
+
+.logo-con {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.logo-con img{
+    width: 50px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+@media (max-width: 400px) {
+    .menu ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu li {
+        width: 100%;
+        margin: 20px;
+    }
+    
 }
